# kaliveda

./: .gitignore  CMakeLists.txt  INSTALL  KVConfig.h.in  README.md  VERSION  index.html  params.json
BackTrack/: CMakeLists.txt
FAZIA/: CMakeLists.txt
KVIndra/: CMakeLists.txt
KVIndra/INDRA2ROOT/: CMakeLists.txt  ROOT_Fortran_Interface.cpp  faire_arbre_c2.f  faire_arbre_c4.f  kali_lecture_dst_camp1.f  kali_lecture_dst_camp2.f  kali_lecture_dst_camp4.f
KVIndra/INDRA2ROOT/fortran_lecture_dst/: compil_kali
cmake/: CreateConfigHeader.cmake  CreateVersionControlHeader.cmake  FindCERNLIB.cmake  KaliVedaMacros.cmake  SetUpROOTBuild.cmake
etc/: ccali-fazia.rootrc
execs/: CMakeLists.txt  analyse_logs.cxx
htmldoc_v1.10/: Analysisv.html  Analysisv_e494s.html  Analysisv_e503.html  BACKTRACK_BASE_Index.html  BACKTRACK_Index.html  BACKTRACK_MODELS_Index.html  BackTrack.html  BackTrack__GenericModel.html  BackTrack__GenericModel_Binned.html  BackTrack__GenericPDFModel.html  BackTrack__Simple1DModel.html  BackTrack__Simple2DModel.html  BackTrack__Simple2DModel_Binned.html  BackTrack__SimpleGeminiModel_Binned.html  Binary16_t.html  Binary8_t.html  Binary_t_Long64_t_.html  Binary_t_UChar_t_.html  Binary_t_UInt_t_.html  Binary_t_UShort_t_.html  Binary_t_unsigned_char_.html  Binary_t_unsigned_int_.html  Binary_t_unsigned_short_.html  CMakeCache.html  (+660 more)
htmldoc_v1.10.00/: BACKTRACK_MODELS_Index.html  BackTrack__GenericPDFModel.html  Binary_t_Long64_t_.html  Binary_t_unsigned_short_.html  ClassHierarchy.html  ClassIndex.html  DMSAvailableRunsFile.html  DMSFile_t.html  FAZIA_ANALYSIS_Index.html  FAZIA_DB_Index.html  FAZIA_GEOMETRY_Index.html  FAZIA_IDENTIFICATION_Index.html  FAZIA_Index.html  FAZIA_PARTICLES_Index.html  Hexa_t.html  INDRAGeometryBuilder.html  IRODS.html  KV2Body.html  KVACQParam.html  KVAbundance.html  KVAutoFit.html  KVBIC.html  KVBQSLogReader.html  KVBase.html  KVBatchSystem.html  KVBatchSystemGUI.html  KVBatchSystemManager.html  KVBreakUp.html  KVBrowser.html  KVCalorimetry.html  KVCanvas.html  KVChIo.html  KVChannelEnergyBrho.html  KVChannelEnergyChIo.html  KVClassFactory.html  KVClassMonitor.html  KVColouredBase.html  KVCsI.html  KVCurrentSignal.html  KVDBAlphaPeak.html  (+231 more)
(+2917 files in other folders)
